--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,8 @@
 @import "../node_modules/bootstrap/scss/root";
 
 // Optional components
+@import "../node_modules/bootstrap/scss/reboot";
+@import "../node_modules/bootstrap/scss/containers";
+@import "../node_modules/bootstrap/scss/forms/form-control";
+@import "../node_modules/bootstrap/scss/forms/input-group";
+@import "../node_modules/bootstrap/scss/buttons";
