--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 // Functions first
 @import "../node_modules/bootstrap/scss/functions";
 
@@ -13,7 +17,6 @@
 @import "../node_modules/bootstrap/scss/root";
 
 // Optional components
-@import "../node_modules/bootstrap/scss/reboot";
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/forms/form-control";
 @import "../node_modules/bootstrap/scss/forms/input-group";
