Add `game-item` component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 @import "../node_modules/bootstrap/scss/functions";
 
 // Variable overrides second
-// $primary: #900;
+$primary: #000;
 // $enable-shadows: true;
 // $prefix: "mo-";
 
