update `search-bar` component

--- a/src/app/game-item/game-item.component.html
+++ b/src/app/game-item/game-item.component.html
@@ -1,7 +1,7 @@
 <li>
   <div class="bg-white shadow-lg border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-500 mt-5">
     <figure class="px-5">
-      <img class="rounded-lg -mt-5 w-full h-60" src="{{ game.background_image }}" alt="">
+      <img class="rounded-lg -mt-5 w-full h-60 shadow-lg" src="{{ game.background_image }}" alt="">
     </figure>
     <div class="p-5 pt-3 space-y-2">
       <a href="#">
