--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,4 @@ $primary: #000;
 @import "../node_modules/bootstrap/scss/forms/form-control";
 @import "../node_modules/bootstrap/scss/forms/input-group";
 @import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/reboot";
