--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,9 +1,18 @@
 <form (submit)="onSubmit()">
-  <div>
-    <div class="input-group">
-      <input type="search" class="form-control" placeholder="Search 500,000+ games" aria-label="Search 500,000+ games"
-        name="search" aria-describedby="search-button" [(ngModel)]="inputValue">
-      <button type="submit" class="btn btn-primary" id="search-button">Search</button>
+  <div class="">
+    <div class="input-group input-group-lg">
+      <span class="input-group-text bg-transparent border-2 border-r-0 border-gray-900">
+        <app-search-icon class="scale-150 pl-1"></app-search-icon>
+      </span>
+
+      <input type="search"
+        class="text-base form-control border-2 border-gray-900 border-l-0 border-r-0 focus:shadow-none"
+        placeholder="Search 500,000+ games" aria-label="Search 500,000+ games" name="search"
+        aria-describedby="search-button" [(ngModel)]="inputValue" #inputElement>
+
+      <span class="input-group-text bg-transparent border-2 border-l-0 border-gray-900">
+        <kbd class="bg-gray-200 text-black">/</kbd>
+      </span>
     </div>
   </div>
 </form>
