--- a/src/app/game-card/game-card.component.html
+++ b/src/app/game-card/game-card.component.html
@@ -1,5 +1,6 @@
 <li>
-  <div class="bg-white shadow-lg border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-500 mt-5">
+  <div class="bg-white shadow-lg border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-500 mt-5"
+    (click)="handleClick($event)">
     <figure class="px-5">
       <img class="rounded-lg -mt-5 w-full h-60 shadow-lg" src="{{ game.background_image }}" alt="">
     </figure>
