Update `game-modal`: Update design

--- a/src/app/game-card/game-card.component.html
+++ b/src/app/game-card/game-card.component.html
@@ -1,5 +1,5 @@
 <li>
-  <div class="bg-white shadow-lg border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-500 mt-5"
+  <article class="bg-white shadow-lg border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-500 mt-5"
     (click)="handleClick($event)">
     <figure class="px-5">
       <img class="rounded-lg -mt-5 w-full h-60 shadow-lg" src="{{ game.background_image }}" alt="">
@@ -25,5 +25,5 @@
         <button type="button" class="btn btn-primary px-6 rounded-full">Buy</button>
       </div>
     </div>
-  </div>
+  </article>
 </li>
