--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -11,7 +11,7 @@
         aria-describedby="search-button" [(ngModel)]="inputValue" #inputElement>
 
       <span class="input-group-text bg-transparent border-2 border-l-0 border-gray-900">
-        <kbd class="bg-gray-200 text-black">/</kbd>
+        <kbd class="bg-gray-200 text-black px-1">/</kbd>
       </span>
     </div>
   </div>
