--- a/src/app/game-modal/game-modal.component.html
+++ b/src/app/game-modal/game-modal.component.html
@@ -4,25 +4,20 @@
   <ng-template #loading>Loading...</ng-template>
 
   <ng-template #details>
-    <figure class="-mx-4 relative">
+    <figure class="-mx-4 -mt-4 relative overflow-hidden rounded-t-lg">
       <img class="" src="{{ game!.background_image }}" alt="">
 
       <div class="absolute h-20 w-full bottom-0 left-0 bg-gradient-to-t from-white to-transparent"></div>
     </figure>
 
-    <div class="-mt-4 z-10 relative space-y-2">
+    <div class="-mt-2 z-10 relative space-y-2 px-5 pb-5">
       <h1 class="text-3xl font-bold">{{ game!.name }}</h1>
 
-      <ul>
-        <li class="flex space-x-2 items-center">
-          <app-star-icon></app-star-icon>
-          <span class="text-sm">{{ game!.rating}}</span>
+      <ul class="flex space-x-3">
+        <li *ngFor="let genre of game!.genres" class="text-gray-500">
+          {{genre.name}}
         </li>
       </ul>
-
-      <!-- TODO: List genres -->
-
-      <div class="text-sm py-3" [innerHtml]="game!.description"></div>
 
       <div class="flex space-x-4 items-start">
         <h5 class="text-4xl font-bold">{{ game?.rating }}</h5>
@@ -31,6 +26,64 @@
           <p class="text-sm">{{ game?.ratings_count }} reviews</p>
         </div>
       </div>
+
+
+      <ul *ngIf="game!.screenshots_count > 0" class="flex space-x-3 max-w-full overflow-auto pb-2 pt-2">
+        <li *ngFor="let screenshot of game!.screenshots; let index = index" class="flex-shrink-0">
+          <img src="{{ screenshot.image }}" alt="Screenshot #{{ index + 1}}" class="rounded-md w-60">
+        </li>
+      </ul>
+
+      <div class="grid grid-cols-3 py-3 gap-3">
+        <div class="col-span-2">
+          <div class="text-sm" [innerHtml]="game!.description"></div>
+        </div>
+
+        <aside class="text-sm">
+          <ul class="space-y-2">
+            <li>
+
+              <p>
+                <strong class="font-bold">Platforms</strong>:
+                <span *ngFor="let platform of game!.platforms; let index = index">{{ index > 0 ? "," : '' }} {{
+                  platform.platform.name }}</span>
+              </p>
+
+            </li>
+
+            <li>
+              <p>
+                <strong class="font-bold">Publishers:</strong>
+                <span *ngFor="let publisher of game!.publishers; let index = index">{{ index > 0 ? "," : '' }} {{
+                  publisher.name }}</span>
+              </p>
+            </li>
+
+            <li>
+              <p>
+                <strong class="font-bold">Release: </strong>
+                <span>{{ game!.released | date }}</span>
+              </p>
+            </li>
+
+            <li>
+              <p>
+                <strong class="font-bold">Website: </strong>
+                <a class="underline" [href]="game!.website" target="_blank">{{ game!.website }}</a>
+              </p>
+            </li>
+          </ul>
+        </aside>
+      </div>
+
+
+      <div *ngIf="game!.movies_count > 0">
+        <video controls>
+          <source src="{{ game!.movies[0].data.max }}" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+      </div>
+
     </div>
   </ng-template>
 </app-modal>
