--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" tabindex="-1" #modal aria-hidden="true">
+<div class="modal fade modal-lg" tabindex="-1" #modal aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
