Update `home` page: improve responsive

--- a/src/app/game-card/game-card.component.html
+++ b/src/app/game-card/game-card.component.html
@@ -1,8 +1,9 @@
 <li>
-  <article class="bg-white shadow-lg border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-500 mt-5"
+  <article
+    class="bg-white shadow-lg border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-900 overflow-hidden cursor-pointer"
     (click)="handleClick($event)">
-    <figure class="px-5">
-      <img class="rounded-lg -mt-5 w-full h-60 shadow-lg" src="{{ game.background_image }}" alt="">
+    <figure class="h-60 w-full relative">
+      <img class="w-full h-full object-fill" src="{{ game.background_image }}" alt="{{ game.name }}">
     </figure>
     <div class="p-5 pt-3 space-y-2">
       <a href="#" class="">
@@ -12,20 +13,17 @@
           game.name }}</h5>
       </a>
 
-      <ul *ngIf="game.platforms?.length" class="flex text-xs space-x-2 text-gray-500">
+      <ul *ngIf="game.platforms?.length"
+        class="flex text-xs space-x-2 text-gray-500 text-ellipsis whitespace-nowrap w-full overflow-hidden">
         <li *ngFor="let platform of game.platforms.slice(0, 3)" class="whitespace-nowrap">
           {{ platform.platform.name }}
         </li>
         <li *ngIf="game.platforms.length > 3">...</li>
       </ul>
 
-      <div class="flex justify-between items-end">
-        <div class="flex items-center space-x-2 border-2 border-gray-500 rounded-full px-3 py">
-          <app-star-icon></app-star-icon>
-          <span class="">{{ game.rating }}</span>
-        </div>
-
-        <button type="button" class="btn btn-primary px-6 rounded-full">Buy</button>
+      <div class="flex items-center space-x-2">
+        <app-star-icon></app-star-icon>
+        <span class="">{{ game.rating }}</span>
       </div>
     </div>
   </article>
