--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
   </ng-template>
 
   <ng-template #list>
-    <ul class="grid grid-cols-3 gap-8">
+    <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
       <app-game-card *ngFor="let game of games" [game]="game" (onClick)="showGameDetails($event.id)">
       </app-game-card>
     </ul>
