Update `game-modal`: Improve responsive

--- a/src/app/game-card/game-card.component.html
+++ b/src/app/game-card/game-card.component.html
@@ -3,7 +3,7 @@
     class="bg-white shadow-lg border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-900 overflow-hidden cursor-pointer"
     (click)="handleClick($event)">
     <figure class="h-60 w-full relative">
-      <img class="w-full h-full object-fill" src="{{ game.background_image }}" alt="{{ game.name }}">
+      <img class="w-full h-full object-cover" src="{{ game.background_image }}" alt="{{ game.name }}">
     </figure>
     <div class="p-5 pt-3 space-y-2">
       <a href="#" class="">
