--- a/src/app/game-card/game-card.component.html
+++ b/src/app/game-card/game-card.component.html
@@ -1,6 +1,6 @@
 <li>
   <article
-    class="bg-white shadow-lg border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-900 overflow-hidden cursor-pointer"
+    class="bg-white border-2 rounded-lg dark:bg-gray-800 dark:border-gray-700 border-gray-900 overflow-hidden cursor-pointer hover:-translate-y-2 hover:-translate-x-2 transition-all hover:shadow-[0.5rem_0.5rem_0px_0px_#000000]"
     (click)="handleClick($event)">
     <figure class="h-60 w-full relative">
       <img class="w-full h-full object-cover" src="{{ game.background_image }}" alt="{{ game.name }}">
