--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,4 @@ $primary: #000;
 @import "../node_modules/bootstrap/scss/forms/input-group";
 @import "../node_modules/bootstrap/scss/buttons";
 @import "../node_modules/bootstrap/scss/modal";
+@import "../node_modules/bootstrap/scss/forms/form-select";
