--- a/src/app/ordering-select/ordering-select.component.html
+++ b/src/app/ordering-select/ordering-select.component.html
@@ -2,6 +2,6 @@
   <option selected value="">Sort By</option>
   <option value="">Default</option>
   <option value="name">Alphabetically</option>
-  <option value="released">Release Date</option>
-  <option value="rating">Rating</option>
+  <option value="-released">Release Date</option>
+  <option value="-rating">Rating</option>
 </select>
