Update `ordering-select`: Beautify

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,12 @@
 <div class="container">
   <header class="mb-16 pt-6 flex justify-center">
-    <div class="w-full lg:w-1/2">
-      <app-search-bar></app-search-bar>
-      <app-ordering-select></app-ordering-select>
+    <div class="w-full lg:w-1/2 space-y-4">
+      <div>
+        <app-search-bar></app-search-bar>
+      </div>
+      <div>
+        <app-ordering-select></app-ordering-select>
+      </div>
     </div>
   </header>
 
