--- a/src/app/ordering-select/ordering-select.component.html
+++ b/src/app/ordering-select/ordering-select.component.html
@@ -1,7 +1,14 @@
-<select class="form-select" aria-label="Select ordering" [(ngModel)]="selectedValue" (change)="onChange()">
-  <option selected value="">Sort By</option>
-  <option value="">Default</option>
-  <option value="name">Alphabetically</option>
-  <option value="-released">Release Date</option>
-  <option value="-rating">Rating</option>
-</select>
+<div class="input-group input-group-lg">
+  <span class="input-group-text bg-transparent border-2 border-r-0 border-gray-900">
+    <app-sliders-icon class="scale-150 pl-1"></app-sliders-icon>
+  </span>
+
+  <select class="form-select form-select-lg border-2 border-gray-900 border-l-0 focus:shadow-none"
+    aria-label="Select ordering" [(ngModel)]="selectedValue" (change)="onChange()">
+    <option selected value="">Sort By</option>
+    <option value="">Default</option>
+    <option value="name">Alphabetically</option>
+    <option value="-released">Release Date</option>
+    <option value="-rating">Rating</option>
+  </select>
+</div>
