Update `home` page: Add title

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,9 @@
 <div class="container">
   <header class="mb-16 pt-6 flex justify-center">
+
     <div class="w-full lg:w-1/2 space-y-4">
+      <h1 class="text-center font-mono text-5xl font-bold">Video Game DB</h1>
+
       <div>
         <app-search-bar></app-search-bar>
       </div>
