--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,5 +27,17 @@
     </ul>
   </ng-template>
 
+  <div class="py-10">
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-center">
+        <li class="page-item" *ngIf="isPreviousEnabled"><a class="page-link" href="#"
+            (click)="setPreviousPage($event)">Previous</a></li>
+
+        <li class="page-item" *ngIf="isNextEnabled"><a class="page-link" href="#" (click)="setNextPage($event)">Next</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
   <app-game-modal [id]="currentGameId" [isOpen]="isOpen" (onClose)="hideGameDetails()"></app-game-modal>
 </div>
