--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,4 @@ $primary: #000;
 @import "../node_modules/bootstrap/scss/buttons";
 @import "../node_modules/bootstrap/scss/modal";
 @import "../node_modules/bootstrap/scss/forms/form-select";
+@import "../node_modules/bootstrap/scss/pagination";
